<resources>
    <string name="app_name">MauroCalculator</string>
    <string name="string_main_activity_hint_number">number</string>
    <string name="string_main_activity_result">Result =</string>
    <string name="string_main_activity_button_0">0</string>
    <string name="string_main_activity_button_1">1</string>
    <string name="string_main_activity_button_2">2</string>
    <string name="string_main_activity_button_3">3</string>
    <string name="string_main_activity_button_4">4</string>
    <string name="string_main_activity_button_5">5</string>
    <string name="string_main_activity_button_6">6</string>
    <string name="string_main_activity_button_7">7</string>
    <string name="string_main_activity_button_8">8</string>
    <string name="string_main_activity_button_9">9</string>
    <string name="txt_main_activity_button_difference">-</string>
    <string name="txt_main_activity_button_sum">+</string>
    <string name="txt_main_activity_button_product">*</string>
    <string name="txt_main_activity_button_divide">/</string>
    <string name="txt_main_activity_button_dot">.</string>
    <string name="txt_main_activity_button_CE">CE</string>
    <string name="txt_main_activity_button_AC">AC</string>
    <string name="txt_main_activity_button_result">=</string>

</resources>
