<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.9">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/input_editText"
                android:TextSize="@dimens/txt_number_hint_size"
                android:hint="@string/string_main_activity_hint_number"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_main_activity_result"
                android:textSize="@dimen/txt_result_size"
                android:id="@+id/result_text"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_linear_margin"
                android:orientation="horizontal">
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:background="@color/color_main_activity_button_oparation"
                    android:text="@string/txt_main_activity_button_CE"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_clear"/>
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:background="@color/color_main_activity_button_oparation"
                    android:text="@string/txt_main_activity_button_AC"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_del"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_linear_margin"
                android:orientation="horizontal">
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:background="@color/color_main_activity_button_numbers"
                    android:id="@+id/button_1"
                    android:text="@string/string_main_activity_button_1"/>
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:background="@color/color_main_activity_button_numbers"
                    android:text="@string/string_main_activity_button_2"
                    android:id="@+id/button_2"/>
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:background="@color/color_main_activity_button_numbers"
                    android:text="@string/string_main_activity_button_3"
                    android:id="@+id/button_3"/>
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:background="@color/color_main_activity_button_oparation"
                    android:text="@string/txt_main_activity_button_sum"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_sum"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/layout_linear_margin">
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:id="@+id/button_4"
                    android:background="@color/color_main_activity_button_numbers"
                    android:text="@string/string_main_activity_button_4"/>
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/string_main_activity_button_5"
                    android:id="@+id/button_5"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/string_main_activity_button_6"
                    android:id="@+id/button_6"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:background="@color/color_main_activity_button_oparation"
                    android:text="@string/txt_main_activity_button_difference"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_difference"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_linear_margin"
                android:orientation="horizontal">
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:id="@+id/button_7"
                    android:text="@string/string_main_activity_button_7"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/string_main_activity_button_8"
                    android:id="@+id/button_8"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/string_main_activity_button_9"
                    android:id="@+id/button_9"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:background="@color/color_main_activity_button_oparation"
                    android:text="@string/txt_main_activity_button_product"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_product"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/layout_linear_margin"
                android:orientation="horizontal">
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/txt_main_activity_button_dot"
                    android:id="@+id/button_dot"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_number_margin_width"
                    android:layout_height="@dimen/button_number_margin_height"
                    android:text="@string/string_main_activity_button_0"
                    android:id="@+id/button_0"
                    android:background="@color/color_main_activity_button_numbers"
            />
            <Button
                    android:layout_width="@dimen/button_margin_width"
                    android:layout_height="@dimen/button_margin_height"
                    android:text="@string/txt_main_activity_button_divide"
                    android:background="@color/color_main_activity_button_oparation"
                    android:textColor="@color/color_operations"
                    android:id="@+id/button_divide"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>